--- a/CSS/style.css
+++ b/CSS/style.css
@@ -44,7 +44,6 @@ body {
 #logo {
 	height: 30px;
 	width: 100px;
-	background-color: white;
 	color: black;
 	display: inline-block;
 	position: fixed;
@@ -62,15 +61,21 @@ body {
 	top: 0;
 	right: 0;
 	z-index: 2;
+	border: none;
 }
 
 .header {
 	width: 100%;
 	height: 200px;
-	border: grey 1px dashed;
-	background-color: rgba(242, 242, 242, 1);
+	border: darkgrey 1px dashed;
+	background-color: rgba(97, 97, 97, 1);
 	position: relative;
 	display: block;
+}
+
+.header p {
+	color: white;
+	font-size: 3em;
 	text-align: center;
-	line-height: 200px;
+	line-height: 50px;
 }
