--- a/CSS/style.css
+++ b/CSS/style.css
@@ -24,13 +24,6 @@ body {
 	NAVIGATION
 	****************************/
 
-#nav_background {
-	height: 40px;
-	width: 100%;
-	background-color: lightgrey;
-	display: block;
-}
-
 #nav {
 	height: 40px;
 	width: 100%;
@@ -67,15 +60,32 @@ body {
 .header {
 	width: 100%;
 	height: 200px;
-	border: darkgrey 1px dashed;
 	background-color: rgba(97, 97, 97, 1);
 	position: relative;
 	display: block;
 }
 
-.header p {
+#header_textbox p {
 	color: white;
 	font-size: 3em;
 	text-align: center;
 	line-height: 50px;
+}
+
+#textbox_top {
+	width: 90%;
+	margin: auto;
+}
+
+#textbox_top h1 {
+	font-size: 40px;
+	line-height: 44px;
+}
+
+.blue_text {
+	color: blue;
+}
+
+.grey_text {
+	color: grey;
 }
