--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,20 +3,12 @@
 	GENERAL
 	****************************/
 
-html p {
-	color: rgba(56, 56, 56, 1);
-}
-
 body {
 	width: 100%;
 	height: 1200px;
 	padding: 0;
 	margin: 0;
     background: #fff;
-    color: #292f33;
-    font-size: 14px;
-    line-height: 18px;
-    overflow-y: scroll;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
@@ -29,47 +21,56 @@ body {
 	width: 100%;
 	background-color: rgba(255, 255, 255, 0.9);
 	position: fixed;
-	margin-top: -40px;
-	z-index: 1;
-	line-height: 40px;
+	top: 0;
+	border: solid 1px red;
+	z-index: 3;
 }
 
-#logo {
-	height: 30px;
+#new_logo {
+	height: 40px;
 	width: 100px;
 	color: black;
+	border: dashed 1px black;
 	display: inline-block;
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 2;
-	line-height: 40px;
+	float: left;
 }
 
-#nav_lets_go {
-	clear: both;
+#nav_button {
 	background-color: rgba(87, 255, 134, 1);
 	color: white;
-	position: fixed;
-	top: 0;
-	right: 0;
-	z-index: 2;
 	border: none;
+	float: right;
+	margin-right: 5px;
+	margin-top: 5px;
 }
 
 .header {
 	width: 100%;
-	height: 200px;
+	height: 300px;
 	background-color: rgba(97, 97, 97, 1);
 	position: relative;
 	display: block;
+	margin-top: 40px;
 }
 
-#header_textbox p {
+#header_textbox {
+	height: 50%;
+	width: 100%;
+	border: 2px dashed white;
+	position: relative;
+	top: 50%;
+	transform: 			translateY(-50%);
+}
+
+
+
+#header_textbox_text {
+	border: 2px dashed blue;
 	color: white;
-	font-size: 3em;
+	font-size: 3.2em;
 	text-align: center;
-	line-height: 50px;
+	margin-top: 0;
+	height: 100%;
 }
 
 #textbox_top {
