--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,7 +4,7 @@
 	****************************/
 
 body {
-	width: 100%;
+	width: 400px;
 	height: 1200px;
 	padding: 0;
 	margin: 0;
@@ -111,4 +111,6 @@ body {
 	margin: 20px auto;
 	position: relative;
 	border: 1px dashed lightgrey;
+}
+
 }
