--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,9 +2,12 @@
 	/****************************
 	GENERAL
 	****************************/
+html {
+	width: 400px;
+}
 
 body {
-	width: 400px;
+	width: 100%;
 	height: 1200px;
 	padding: 0;
 	margin: 0;
@@ -18,7 +21,7 @@ body {
 
 #nav {
 	height: 40px;
-	width: 100%;
+	width: 400px;
 	background-color: rgba(255, 255, 255, 0.9);
 	position: fixed;
 	top: 0;
