--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,7 +21,7 @@ body {
 
 #nav {
 	height: 40px;
-	width: 400px;
+	width: 100%;
 	background-color: rgba(255, 255, 255, 0.9);
 	position: fixed;
 	top: 0;
