--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,5 @@
 
-	/****************************
-	GENERAL
-	****************************/
+
 html {
 	width: 400px;
 }
@@ -41,6 +39,7 @@ body {
 	/****************************
 	BUTTONS
 	****************************/
+
 .button {
 	color: white;
 	border: none;
@@ -62,7 +61,9 @@ body {
 	font-size: 0.9em;
 }
 
-
+	/****************************
+	HEADER
+	****************************/
 
 .header {
 	width: 100%;
@@ -80,10 +81,6 @@ body {
 	top: 50%;
 	transform: 			translateY(-50%);
 }
-
-	/****************************
-	HEADER
-	****************************/
 
 #header_textbox_text {
 	border: 2px dashed blue;
@@ -114,6 +111,10 @@ body {
 	color: grey;
 }
 
+	/****************************
+	SECTIONS
+	****************************/
+
 .section {
 	border: 1px dashed lightgrey;
 	width: 350px;
@@ -121,10 +122,28 @@ body {
 	text-align: center;
 }
 
+.section_small {
+	border: 1px dashed lightgrey;
+	width: 300px;
+	margin: 0 auto 50px;
+}
+
+.section_small img {
+	width: 300px;
+	height: 246px;
+	margin: 20px auto;
+	position: relative;
+	border: 1px dashed lightgrey;
+}
+
 #textbox_top_description {
 	text-align: left;
 	margin: -30px auto 0px;
 }
+
+	/****************************
+	WEBSITE LINKS
+	****************************/
 
 .website_thumbnail {
 /*	border: 1px dashed grey;
@@ -166,19 +185,9 @@ body {
 	background-color: rgba(0, 0, 0, 0.0);
 }
 
-.section_small {
-	border: 1px dashed lightgrey;
-	width: 300px;
-	margin: 0 auto 50px;
-}
-
-.section_small img {
-	width: 300px;
-	height: 246px;
-	margin: 20px auto;
-	position: relative;
-	border: 1px dashed lightgrey;
-}
+	/****************************
+	ICONS
+	****************************/
 
 .icons {
 	width: 100px;
@@ -191,6 +200,10 @@ body {
 	height: 117px;
 	margin: 0 auto;
 }
+
+	/****************************
+	INFO BOXES
+	****************************/
 
 .box {
 	width: 360px;
@@ -212,12 +225,6 @@ body {
 	background-image: url('http://s22.postimg.org/tp1jq4r7z/laptop_958239_1280.png');
 }
 
-.opacity_filter {
-	width: 360px;
-	height: 240px;
-	z-index: 2;
-}
-
 .box_header {
 	font-size: 1.5em;
 	color: white;
@@ -230,6 +237,16 @@ body {
 	color: white;
 	border: 1px dashed white;
 	opacity: 1;
+}
+
+	/****************************
+	OPACITY FILTERS
+	****************************/
+
+.opacity_filter {
+	width: 360px;
+	height: 240px;
+	z-index: 2;
 }
 
 #black_opacity_filter {
