--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,7 +9,7 @@ body {
 	height: 1200px;
 	padding: 0;
 	margin: 0;
-    background: #fff;
+    background: rgba(250, 250, 250, 1);
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
@@ -44,23 +44,45 @@ body {
 	color: white;
 	border: none;
 	border-radius: 3px;
+}
+
+.small_button {
 
 }
 
-#nav_button {
-	background-color: rgba(61, 219, 122, 1);
-	float: right;
-	margin-right: 5px;
-	margin-top: 5px;
-}
-
-#pricing_button {
-	background-color: rgba(87, 143, 255, 1);
+.medium_button {
 	width: 120px;
 	height: 30px;
 	font-size: 0.9em;
 }
 
+.large_button {
+	width: 250px;
+	height: 40px;
+	font-size: 1.1em;
+}
+
+.green_button {
+	background-color: rgba(61, 219, 122, 1);
+}
+
+.blue_button {
+	background-color: rgba(87, 143, 255, 1);
+}
+
+#nav_button {
+	float: right;
+	margin-right: 5px;
+	margin-top: 5px;
+}
+
+#buy_button {
+	margin: 20px 0 5px;
+}
+
+#buy_premium_button {
+	margin: 20px 0 5px;
+}
 	/****************************
 	HEADER
 	****************************/
@@ -97,6 +119,11 @@ body {
 	margin: auto;
 }
 
+#textbox_top_description {
+	text-align: left;
+	margin: -30px auto 0px;
+}
+
 #textbox_top h1 {
 	font-size: 40px;
 	line-height: 44px;
@@ -114,6 +141,13 @@ body {
 	/****************************
 	SECTIONS
 	****************************/
+
+.section_full_width {
+	border: 1px dashed lightgrey;
+	width: 400px;
+	margin: 20px auto;
+	text-align: center;
+}
 
 .section {
 	border: 1px dashed lightgrey;
@@ -134,11 +168,6 @@ body {
 	margin: 20px auto;
 	position: relative;
 	border: 1px dashed lightgrey;
-}
-
-#textbox_top_description {
-	text-align: left;
-	margin: -30px auto 0px;
 }
 
 	/****************************
@@ -201,6 +230,11 @@ body {
 	margin: 0 auto;
 }
 
+.icons_small {
+	width: 16px;
+	height: 16px;
+}
+
 	/****************************
 	INFO BOXES
 	****************************/
@@ -260,3 +294,65 @@ body {
 #white_opacity_filter {
 	background-color: rgba(87, 143, 255, 0.8);
 }
+
+	/****************************
+	TABLE
+	****************************/
+
+.pricing_table {
+	background-color: rgba(242, 242, 242, 1);
+	width: 350px;
+	margin: 0 auto;
+	border: none;
+	line-height: 1.7em;
+}
+
+#table_header {
+	width: 350px;
+	margin: 0 auto;
+	background-color: rgba(237, 237, 237, 1);
+	padding: 5px 0 20px;
+}
+
+#table1 {
+	margin: 0 auto 50px;
+	padding-bottom: 10px;
+}
+
+.light1 {
+	background-color: rgba(237, 237, 237, 1);
+}
+
+.icon_cell {
+	width: 60px;
+	text-align: right;
+}
+
+.text_cell {
+	text-align: left;
+	padding-left: 35px;
+}
+
+
+#table2 {
+}
+
+#price_info_box {
+	font-size: 0.8em; 
+	color: grey;
+	text-align: right;
+	width: 200px;
+	margin: auto;
+	padding-right: 20px;
+}
+
+
+#we_do_everything {
+	background-color: rgba(61, 219, 122, 1);
+	color: white;
+	font-family: impact;
+	font-size: 1.5em;
+	padding: 20px 0;
+}
+
+
