--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,8 +9,13 @@ body {
 	height: 1200px;
 	padding: 0;
 	margin: 0;
-    background: rgba(250, 250, 250, 1);
+    background: rgba(247, 247, 247, 1);
+    color: #888;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+body h1, h2, h3, h4, h5, h6 {
+	color: #595959;
 }
 
 	/****************************
@@ -261,9 +266,12 @@ body {
 
 .box_header {
 	font-size: 1.5em;
-	color: white;
 	text-align: center;
 	border: 1px dashed white;
+}
+
+.box_header h3 {
+	color: white;
 }
 
 .box_textbox {
@@ -353,6 +361,25 @@ body {
 	font-family: impact;
 	font-size: 1.5em;
 	padding: 20px 0;
+}
+
+footer {
+	height: 40px;
+	width: 100%;
+	background-color: rgba(245, 245, 245, 1);
+	text-align: center;
+	line-height: 40px;
+	font-size: 0.8em;
+	margin-top: 50px;
+	border-top: 1px solid rgba(235, 235, 235, 1);
+
+}
+
+footer a {
+	text-align: center;
+	margin: 0px 10px 5px;
+	text-decoration: none;
+	color: grey;
 }
 
 
