--- a/CSS/style.css
+++ b/CSS/style.css
@@ -363,6 +363,10 @@ body h1, h2, h3, h4, h5, h6 {
 	padding: 20px 0;
 }
 
+.about_p {
+	margin-bottom: 50px;
+}
+
 footer {
 	height: 40px;
 	width: 100%;
