--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,13 +2,14 @@
 
 html {
 	width: 400px;
+	height: auto;
+
 }
 
 body {
 	width: 100%;
-	height: 1200px;
-	padding: 0;
 	margin: 0;
+	padding: 0;
     background: rgba(247, 247, 247, 1);
     color: #888;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -18,6 +19,11 @@ body h1, h2, h3, h4, h5, h6 {
 	color: #595959;
 }
 
+body h1 {
+	font-size: 40px;
+	line-height: 44px;
+}
+
 	/****************************
 	NAVIGATION
 	****************************/
@@ -25,14 +31,14 @@ body h1, h2, h3, h4, h5, h6 {
 #nav {
 	height: 40px;
 	width: 100%;
-	background-color: rgba(255, 255, 255, 0.9);
+	background-color: rgba(247, 247, 247, 0.9);
 	position: fixed;
 	top: 0;
 	border: solid 1px red;
 	z-index: 3;
 }
 
-#new_logo {
+#logo {
 	height: 40px;
 	width: 100px;
 	color: black;
@@ -52,6 +58,10 @@ body h1, h2, h3, h4, h5, h6 {
 }
 
 .small_button {
+	width: auto;
+	padding: 10px 20px;
+	line-height: 12px;
+	font-size: 12px;
 
 }
 
@@ -77,8 +87,10 @@ body h1, h2, h3, h4, h5, h6 {
 
 #nav_button {
 	float: right;
-	margin-right: 5px;
-	margin-top: 5px;
+	margin-right: 10px;
+	margin-top: 4px;
+	line-height: 12px;
+	font-size: 12px;
 }
 
 #buy_button {
@@ -88,6 +100,7 @@ body h1, h2, h3, h4, h5, h6 {
 #buy_premium_button {
 	margin: 20px 0 5px;
 }
+
 	/****************************
 	HEADER
 	****************************/
@@ -96,17 +109,14 @@ body h1, h2, h3, h4, h5, h6 {
 	width: 100%;
 	height: 500px;
 	background-color: rgba(97, 97, 97, 1);
-	position: relative;
-	display: block;
+	margin: 0 auto ;
 }
 
 #header_textbox {
-	height: 50%;
 	width: 100%;
 	border: 2px dashed white;
 	position: relative;
-	top: 50%;
-	transform: 			translateY(-50%);
+	top: 50px;
 }
 
 #header_textbox_text {
@@ -115,24 +125,25 @@ body h1, h2, h3, h4, h5, h6 {
 	font-size: 3.2em;
 	text-align: left;
 	margin-top: 0;
-	margin-left: 10%;
-	height: 100%;
+	margin-left: 30px;
 }
 
-#textbox_top {
+#body_textbox {
 	width: 350px;
-	margin: auto;
+	margin: 25px auto 0;
+	border: 1px dashed grey;
 }
 
-#textbox_top_description {
+#body_textbox_description {
+	width: 350px;
 	text-align: left;
-	margin: -30px auto 0px;
+	margin: 0 auto;
+	border: 1px dashed grey;
 }
 
-#textbox_top h1 {
-	font-size: 40px;
-	line-height: 44px;
+#body_textbox h1 {
 	border: 1px dashed lightgrey;
+	margin: 0;
 }
 
 .blue_text {
@@ -164,7 +175,14 @@ body h1, h2, h3, h4, h5, h6 {
 .section_small {
 	border: 1px dashed lightgrey;
 	width: 300px;
-	margin: 0 auto 50px;
+	margin: 50px auto;
+}
+
+.section_top {
+	background-color: rgba(240, 240, 240, 1);
+	margin-top: 0;
+	padding-bottom: 20px;
+	text-align: left;
 }
 
 .section_small img {
@@ -183,7 +201,11 @@ body h1, h2, h3, h4, h5, h6 {
 /*	border: 1px dashed grey;
 */	width: 300px;
 	height: 200px;
-	margin: 25px auto;
+	margin: 50px auto;
+}
+
+.website_thumbnail button {
+	margin: 85px 5px;
 }
 
 #website1 {
@@ -207,9 +229,9 @@ body h1, h2, h3, h4, h5, h6 {
 	height: 200px;
 }
 
-.black_opacity {
-	width: 300px;
-	height: 200px;
+.black_opacity ,.black_opacity2{
+	width: 100%;
+	height: 100%;
 	background-color: rgba(0, 0, 0, 0.7);
 }
 
@@ -218,6 +240,8 @@ body h1, h2, h3, h4, h5, h6 {
 	height: 200px;
 	background-color: rgba(0, 0, 0, 0.0);
 }
+
+
 
 	/****************************
 	ICONS
@@ -240,6 +264,11 @@ body h1, h2, h3, h4, h5, h6 {
 	height: 16px;
 }
 
+.icons_large {
+	width: 200px;
+	height: 200px;
+}
+
 	/****************************
 	INFO BOXES
 	****************************/
@@ -247,7 +276,7 @@ body h1, h2, h3, h4, h5, h6 {
 .box {
 	width: 360px;
 	height: 240px;
-	margin: 0 auto;
+	margin: 10px auto;
 	background-size: cover;
 	background-repeat: no-repeat;
 }
@@ -265,20 +294,17 @@ body h1, h2, h3, h4, h5, h6 {
 }
 
 .box_header {
-	font-size: 1.5em;
 	text-align: center;
 	border: 1px dashed white;
 }
 
-.box_header h3 {
+.box_header h2 {
 	color: white;
 }
 
 .box_textbox {
-	font-size: 1em;
 	color: white;
 	border: 1px dashed white;
-	opacity: 1;
 }
 
 	/****************************
@@ -327,7 +353,7 @@ body h1, h2, h3, h4, h5, h6 {
 	padding-bottom: 10px;
 }
 
-.light1 {
+.light_row {
 	background-color: rgba(237, 237, 237, 1);
 }
 
@@ -341,10 +367,6 @@ body h1, h2, h3, h4, h5, h6 {
 	padding-left: 35px;
 }
 
-
-#table2 {
-}
-
 #price_info_box {
 	font-size: 0.8em; 
 	color: grey;
@@ -354,20 +376,33 @@ body h1, h2, h3, h4, h5, h6 {
 	padding-right: 20px;
 }
 
+	/****************************
+	OTHER
+	****************************/
 
-#we_do_everything {
-	background-color: rgba(61, 219, 122, 1);
+#we_do_everything_box {
+	height: 300px;
+	background-image: url("http://s29.postimg.org/w3519lr6v/freelancer_763730_1920.jpg");
+	background-size: cover;
 	color: white;
-	font-family: impact;
-	font-size: 1.5em;
-	padding: 20px 0;
+}
+
+#we_do_everything_box div {
+	font-size: 1.1em;
+	height: 100%;
 }
 
 .about_p {
 	margin-bottom: 50px;
 }
 
+	/****************************
+	FOOTER
+	****************************/
+
 footer {
+	position: relative;
+	bottom: 0;
 	height: 40px;
 	width: 100%;
 	background-color: rgba(245, 245, 245, 1);
@@ -385,5 +420,10 @@ footer a {
 	text-decoration: none;
 	color: grey;
 }
+
+
+
+
+
 
 
