--- a/CSS/style.css
+++ b/CSS/style.css
@@ -74,7 +74,7 @@ body h1 {
 .large_button {
 	width: 250px;
 	height: 40px;
-	font-size: 1.1em;
+	font-size: 16px;
 }
 
 .green_button {
@@ -83,6 +83,10 @@ body h1 {
 
 .blue_button {
 	background-color: rgba(87, 143, 255, 1);
+}
+
+.orange_button {
+	background-color: rgba(238, 136, 99, 1);
 }
 
 #nav_button {
@@ -178,7 +182,7 @@ body h1 {
 	margin: 50px auto;
 }
 
-.section_top {
+.<<section_top {
 	background-color: rgba(240, 240, 240, 1);
 	margin-top: 0;
 	padding-bottom: 20px;
