--- a/CSS/style.css
+++ b/CSS/style.css
@@ -209,6 +209,34 @@ body h1 {
 }
 
 	/****************************
+	DIVS
+	****************************/
+
+.div_full_width {
+	width: 100%;
+	height: 300px;
+}
+
+	/****************************
+	THREE STEP MODEL
+	****************************/
+
+#select_your_template {
+	background-image: url("http://s22.postimg.org/arxesx20x/student_849822_640.jpg");
+	background-size: cover; 
+}
+
+#tell_us_about_business {
+	background-image: url("http://s1.postimg.org/9up734hov/startup_594091_640.jpg");
+	background-size: cover; 
+}
+
+#customers {
+	background-image: url("http://s16.postimg.org/5d47xh52t/analytics_925379_640.jpg");
+	background-size: cover;
+}
+
+	/****************************
 	TEMPLATE LINKS
 	****************************/
 
