--- a/CSS/style.css
+++ b/CSS/style.css
@@ -135,6 +135,7 @@ body h1 {
 	text-align: left;
 	margin-top: 0;
 	margin-left: 30px;
+	
 }
 
 #top_textbox {
@@ -212,9 +213,21 @@ body h1 {
 	DIVS
 	****************************/
 
-.div_full_width {
+.div_top_image {
 	width: 100%;
 	height: 300px;
+	vertical-align: bottom;
+}
+
+.div_top_image_textbox {
+	font-size: 25px;
+	color: white;
+	text-align: center;
+	width: 90%;
+	margin: auto;
+	position: relative;
+  	top: 50%;
+  	transform: translateY(-50%);
 }
 
 	/****************************
