--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -62,6 +62,13 @@
 	margin: 30px auto;
 }
 
+.div_top_image {
+	width: 32.8%;
+	height: 25vw;
+	display: inline-block;
+	margin-top: 2px;
+}
+
 }
 
 
@@ -121,5 +128,8 @@
 	height: 250px;
 }
 
-
+/*.div_top_image {
+	height: 300px;
+}
+*/
 }
