--- a/CSS/style.css
+++ b/CSS/style.css
@@ -125,7 +125,7 @@ body h1 {
 	border: 2px dashed white;
 	position: relative;
 	top: 50px;
-	padding: 50px 0;
+	padding-bottom: 50px;
 }
 
 #header_textbox_text {
