--- a/CSS/style.css
+++ b/CSS/style.css
@@ -133,6 +133,7 @@ body h1 {
 	border: 2px dashed blue;
 	color: white;
 	font-size: 11vh;
+	line-height: 11.5vh;
 	min-font-size: 40px;
 	text-align: left;
 	margin-top: 0;
