--- a/CSS/style.css
+++ b/CSS/style.css
@@ -70,7 +70,7 @@ body h1 {
 }
 
 .medium_button {
-	width: 120px;
+	width: 150px;
 	height: 30px;
 	font-size: 0.9em;
 }
@@ -158,6 +158,7 @@ body h1 {
 	border: 1px dashed grey;
 }
 
+
 #top_textbox_subtext {
 	width: 90%;
 	max-width: 600px;	
@@ -227,13 +228,15 @@ body h1 {
 	****************************/
 
 .div_top_image {
-	width: 100%;
+	width: 80%;
 	height: 300px;
 	vertical-align: bottom;
+	margin: 0 auto 10px;
+
 }
 
 .div_top_image_textbox {
-	font-size: 30px;
+	font-size: 22px;
 	font-family: ;
 	color: white;
 	text-align: center;
