--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -19,6 +19,13 @@
 	margin-bottom: 70px;
 }
 
+.div_top_image {
+	width: 450px;
+	height: 300px;
+	margin: 0 auto 30px;
+	border-radius: 100%;
+}
+
 .template {
 	width: 450px;
 	height: 300px;
@@ -72,12 +79,7 @@
 	margin: 30px auto;
 }
 
-.div_top_image {
-	width: 32.8%;
-	height: 25vw;
-	display: inline-block;
-	margin-top: 2px;
-}
+
 
 }
 
@@ -105,6 +107,14 @@
 
 .inner_box {
 	padding-top: 40px;
+}
+
+.div_top_image {
+	width: 25%;
+	height: 25vw;
+	display: inline-block;
+	margin: 0 10px;
+	border-radius: 0;
 }
 
 .template_name {
