--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -42,6 +42,10 @@
 	height: 400px;
 }
 
+.section_divider_textbox h2 {
+	font-size: 40px;
+}
+
 .icon_box {
 	width: 350px;
 	display: inline-block;
@@ -71,11 +75,6 @@
 .table {
 	display: inline-block;
 	margin: 0 10px;
-}
-
-#no_opacity_layer h2 {
-	font-size: 40px;
-	margin: 30px auto;
 }
 
 
