--- a/CSS/style.css
+++ b/CSS/style.css
@@ -254,22 +254,56 @@ body h1 {
   	transform: translateY(-50%);
 }
 
+.div_about_us {
+	width: 100%;
+	max-width: 400px;
+	margin: auto;
+	display: inline-block;
+	vertical-align: top;
+	border: 1px lightgrey dashed;
+	color: #595959;
+}
+
+.div_about_us_image {
+	width: 100%;
+	height: 300px;
+	background-image: url("____");
+	background-color: grey;
+	background-size: cover;
+	margin-bottom: 25px;
+}
+
+.about_us_box {
+	border: 1px dashed lightgrey;
+	width: 100%;
+	margin: 0 auto 100px;
+	text-align: center;
+	margin-bottom: 50px;
+}
+
+.about_us_box p {
+	text-align: left;
+	max-width: 380px;
+	margin: auto;
+	padding-left: 30px;
+}
+
 	/****************************
 	THREE STEP MODEL
 	****************************/
 
 #select_your_template {
-	background-image: url("http://s15.postimg.org/oiukwrkez/startup_593322_640.jpg");
+	background-image: url("http://s1.postimg.org/say84vkkf/entrepreneur_593362_640.jpg");
 	background-size: cover; 
 }
 
 #tell_us_about_business {
-	background-image: url("http://s21.postimg.org/6xr3hljnb/library_849797_640.jpg");
+	background-image: url("http://s7.postimg.org/yn9ibbgcb/entrepreneur_593357_640.jpg");
 	background-size: cover; 
 }
 
 #customers {
-	background-image: url("http://s16.postimg.org/5d47xh52t/analytics_925379_640.jpg");
+	background-image: url("http://s11.postimg.org/mnainzhwz/entrepreneur_593360_640.jpg");
 	background-size: cover;
 }
 
@@ -508,11 +542,6 @@ body h1 {
 	/****************************
 	OTHER
 	****************************/
-
-
-.about_p {
-	margin-bottom: 50px;
-}
 
 	/****************************
 	FOOTER
