--- a/CSS/style.css
+++ b/CSS/style.css
@@ -117,7 +117,7 @@ body h1 {
 	width: 100%;
 	height: 100vh;
 	background-color: rgba(97, 97, 97, 1);
-	margin: 0 auto ;
+	margin: 0 auto 100px;
 }
 
 #header_textbox {
@@ -136,8 +136,7 @@ body h1 {
 	line-height: 11.5vh;
 	min-font-size: 40px;
 	text-align: left;
-	margin-top: 0;
-	margin-left: 30px;
+	margin: 0 30px;
 }
 
 #header_textbox_subtext {
@@ -369,7 +368,7 @@ body h1 {
 	height: 350px;
 	border: 1px dashed lightgrey;
 	width: 100%;
-	margin: 0 auto 100px;
+	margin: 0 auto;
 	text-align: center;
 }
 
@@ -556,7 +555,6 @@ footer {
 	text-align: center;
 	line-height: 40px;
 	font-size: 0.8em;
-	margin-top: 50px;
 	border-top: 1px solid rgba(235, 235, 235, 1);
 
 }
