--- a/CSS/style.css
+++ b/CSS/style.css
@@ -110,7 +110,7 @@ body h1 {
 }
 
 #signup_button {
-	width: 400px;
+	width: 300px;
 }
 
 	/****************************
@@ -120,7 +120,8 @@ body h1 {
 .header {
 	width: 100%;
 	height: 100vh;
-	background-color: rgba(97, 97, 97, 1);
+	background-image: url(http://s7.postimg.org/mmizpcdgr/stockholm_848255_1920.jpg);
+	background-size: cover;
 	margin: 0 auto 100px;
 }
 
@@ -201,7 +202,7 @@ body h1 {
 }
 
 .grey_text {
-	color: grey;
+	color: #888;
 }
 
 	/****************************
