--- a/CSS/style.css
+++ b/CSS/style.css
@@ -120,9 +120,16 @@ body h1 {
 .header {
 	width: 100%;
 	height: 100vh;
-	background-image: url(http://s7.postimg.org/mmizpcdgr/stockholm_848255_1920.jpg);
 	background-size: cover;
 	margin: 0 auto 100px;
+}
+
+#landing_page_header {
+	background-image: url(http://s3.postimg.org/7tdru9agj/stockholm_848255.jpg);
+}
+
+#signup_page_header {
+	background-image: url(http://s23.postimg.org/md5faohjf/sweden_996001.jpg);
 }
 
 #header_textbox {
@@ -134,7 +141,7 @@ body h1 {
 }
 
 #header_textbox_text {
-	max-width: 480px;
+	max-width: 650px;
 	border: 2px dashed blue;
 	color: white;
 	font-size: 9.5vh;
@@ -149,8 +156,9 @@ body h1 {
 	max-width: 1200px;
 	border: 2px dashed blue;
 	color: white;
-	font-size: 5.5vw;
-	line-height: 6vw;
+	font-size: 9.5vh;
+	line-height: 10vh;
+	min-font-size: 40px;
 	text-align: center;
 	margin: 0 auto 30px;
 }
@@ -169,11 +177,13 @@ body h1 {
 #header_textbox_subtext_signup {
 	width: 80%;
 	max-width: 570px;
-	border: 2px dashed blue;
-	color: white;
+/*	border: 2px dashed blue;
+*/	color: #595959;
 	text-align: center;
 	margin: 20px auto;
 	line-height: 20px;
+	border-radius: 10px;
+	padding: 10px 20px;
 }
 
 #top_textbox {
@@ -394,7 +404,7 @@ body h1 {
 	height: 350px;
 	border: 1px dashed lightgrey;
 	width: 100%;
-	margin: 0 auto;
+	margin: -50px auto 0;
 	text-align: center;
 }
 
@@ -582,6 +592,7 @@ footer {
 	line-height: 40px;
 	font-size: 0.8em;
 	border-top: 1px solid rgba(235, 235, 235, 1);
+	margin: 50px 0 0;
 
 }
 
