Changed signup header size

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -129,7 +129,8 @@ body h1 {
 }
 
 #signup_page_header {
-	background-image: url(http://s23.postimg.org/md5faohjf/sweden_996001.jpg);
+	background-image: url(http://s27.postimg.org/9rr4k0ws3/sweden_996001_cropped.png);
+	height: 80vh;
 }
 
 .header_textbox {
