Changed resolution of header images

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -125,11 +125,11 @@ body h1 {
 }
 
 #landing_page_header {
-	background-image: url(http://s3.postimg.org/7tdru9agj/stockholm_848255.jpg);
+	background-image: url(http://i.imgur.com/lVEySX7.jpg);
 }
 
 #signup_page_header {
-	background-image: url(http://s27.postimg.org/9rr4k0ws3/sweden_996001_cropped.png);
+	background-image: url(http://i.imgur.com/tZDDgSY.png);
 	height: 80vh;
 }
 
