--- a/CSS/style.css
+++ b/CSS/style.css
@@ -593,7 +593,7 @@ footer {
 	line-height: 40px;
 	font-size: 0.8em;
 /*	border-top: 1px solid rgba(235, 235, 235, 1);
-*/	margin: 50px 0 0;
+*/	margin: 0;
 
 }
 
