Ajusted thank you page

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -584,6 +584,15 @@ body h1 {
 }
 
 	/****************************
+	THANK YOU PAGE
+	****************************/
+
+#thank_you_list {
+	margin-left: 20%;
+	text-align: left;
+}
+
+	/****************************
 	OTHER
 	****************************/
 
