--- a/CSS/style.css
+++ b/CSS/style.css
@@ -93,6 +93,11 @@ body h1 {
 	background-color: rgba(238, 136, 99, 1);
 }
 
+.grey_button {
+	background-color: #595959;
+	color: white;
+}
+
 #nav_button {
 	float: right;
 	margin-right: 10px;
@@ -175,7 +180,7 @@ body h1 {
 	line-height: 20px;
 }
 
-#header_textbox_subtext_signup {
+#signup_page_box {
 	width: 80%;
 	max-width: 570px;
 /*	border: 2px dashed blue;
@@ -324,6 +329,23 @@ body h1 {
 	padding-left: 30px;
 }
 
+#contact_me {
+/*	border: 1px dashed grey;
+*/	width: 320px;
+	margin: 0 auto;
+	text-align: left;
+}
+
+#contact_me_h1 {
+	width: 80%;
+	margin: 0 auto 30px;
+	line-height: 1.2em;
+}
+
+#contact_me button {
+	text-align: center;
+}
+
 	/****************************
 	THREE STEP MODEL
 	****************************/
@@ -405,7 +427,7 @@ body h1 {
 	height: 350px;
 /*	border: 1px dashed lightgrey;
 */	width: 100%;
-	margin: -50px auto 0;
+	margin: 0 auto 50px;
 	text-align: center;
 }
 
@@ -602,7 +624,7 @@ body h1 {
 
 footer {
 	position: relative;
-	bottom: 0;
+	bottom: -100px;
 	height: 40px;
 	width: 100%;
 	background-color: rgba(245, 245, 245, 1);
@@ -610,7 +632,7 @@ footer {
 	line-height: 40px;
 	font-size: 0.8em;
 /*	border-top: 1px solid rgba(235, 235, 235, 1);
-*/	margin: 0;
+*/	margin: 50px 0 0 0;
 
 }
 
