--- a/CSS/style.css
+++ b/CSS/style.css
@@ -58,27 +58,27 @@ body h1 {
 .button {
 	color: white;
 	border: none;
+	height: 40px;
+	font-size: 16px;
 	border-radius: 3px;
 }
 
 .small_button {
 	width: auto;
 	padding: 10px 20px;
-	line-height: 12px;
-	font-size: 12px;
-
 }
 
 .medium_button {
 	width: 150px;
-	height: 30px;
-	font-size: 0.9em;
+
 }
 
 .large_button {
 	width: 250px;
-	height: 40px;
-	font-size: 16px;
+}
+
+.xlarge_button {
+	width: 250px;
 }
 
 .green_button {
@@ -150,9 +150,8 @@ body h1 {
 	max-width: 800px;
 /*	border: 2px dashed blue;
 */	color: white;
-	font-size: 9.5vh;
-	line-height: 10vh;
-	min-font-size: 40px;
+	font-size: 45px;
+	line-height: 50px;
 	text-align: left;
 	margin: 0 30px;
 }
@@ -424,10 +423,10 @@ body h1 {
 	****************************/
 
 .section_divider {
-	height: 350px;
+	height: 300px;
 /*	border: 1px dashed lightgrey;
 */	width: 100%;
-	margin: 0 auto 50px;
+	margin: 100px auto ;
 	text-align: center;
 }
 
@@ -448,9 +447,12 @@ body h1 {
 
 .section_divider_textbox h2 {
 	color: white;
-	font-size: 30px;
+	font-size: 25px;
 	margin-top: 0;
+}
 
+.section_divider_textbox h2 br {
+	line-height: 180%;
 }
 
 #not_sure_contact_us {
@@ -606,12 +608,23 @@ body h1 {
 }
 
 .contact_us_box {
-	height: 300px;
+	height: 200px;
 	width: 350px;
-	margin: 0 auto 50px;
-	border: 1px dashed grey;
-
+	margin: 10px auto 0px;
+	padding: 10px;
+	vertical-align: top;
+	border-radius: 5px;
 }
+
+.contact_us_textbox {
+	height: 80px;
+	width: 290px;
+	margin: auto;
+	text-align: left;
+	padding-left: 10px;
+/*	border: 1px solid grey;
+*/}
+
 
 	/****************************
 	THANK YOU PAGE
@@ -635,12 +648,12 @@ footer {
 	bottom: -100px;
 	height: 40px;
 	width: 100%;
-	background-color: rgba(245, 245, 245, 1);
+	background-color: rgba(232, 232, 232, 1);
 	text-align: center;
 	line-height: 40px;
 	font-size: 0.8em;
 /*	border-top: 1px solid rgba(235, 235, 235, 1);
-*/	margin: 50px 0 0 0;
+*/	margin: 0;
 
 }
 
