--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -10,15 +10,21 @@ body h1 {
 	line-height: 44px;
 }
 
+
+.xlarge_button {
+	width: 350px;
+	height: 60px;
+	font-size: 20px;
+}
+
 .header_textbox {
 	padding: 50px 0;
 }
 
-#signup_header_textbox {
-	top: 80px;
-}
-
 #header_textbox_text {
+/*	border: 2px dashed blue;
+*/	font-size: 60px;
+	line-height: 70px;
 }
 
 #header_textbox_subtext {
@@ -50,11 +56,16 @@ body h1 {
 }
 
 .section_divider {
-	height: 400px;
+	height: 380px;
 }
 
 .section_divider_textbox h2 {
-	font-size: 40px;
+	font-size: 34px;
+	line-height: 54px;
+}
+
+.section_divider_textbox h2 br {
+	line-height: 100%;
 }
 
 .icon_box {
@@ -99,13 +110,12 @@ body h1 {
 	width: 450px;
 }
 
-#contact_me {
-	width: 500px;
-}
-
-#contact_me_h1 {
-	width: 90%;
-}
+.contact_us_textbox {
+	width: 430px;
+	padding-left: 20px;
+	height: 50px;
+/*	border: 1px dashed grey;
+*/}
 
 .div_about_us {
 	width: 49%;
@@ -197,6 +207,11 @@ body h1 {
 	text-align: center;
 }
 
+.section_divider_textbox h2 {
+	font-size: 40px;
+	line-height: 60px;
+}
+
 .table {
 	display: inline-block;
 	margin: 0 10px;
@@ -218,6 +233,12 @@ body h1 {
 	width: 350px;
 	margin: 0 10px 50px;
 	display: inline-block;
+}
+
+.contact_us_textbox {
+	width: 290px;
+	padding-left: 10;
+	height: 80px;
 
 }
 
