Changed the font to lato

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,7 +15,7 @@ body {
 	padding: 0;
     background: rgba(237, 237, 237, 1);
     color: #888;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 body h1, h2, h3, h4, h5, h6 {
