--- a/CSS/style.css
+++ b/CSS/style.css
@@ -152,6 +152,7 @@ body h1 {
 */	color: white;
 	font-family: "Lato";
 	font-size: 45px;
+	font-weight: 600;
 	line-height: 50px;
 	text-align: left;
 	margin: 0 30px;
