--- a/CSS/style.css
+++ b/CSS/style.css
@@ -391,7 +391,7 @@ body h1 {
 
 .imac_section_textbox h2 {
 	text-align: center;
-	font-size: 1.5em;
+	font-size: 30px;
 }
 
 .imac_section_imagebox {
