--- a/CSS/style.css
+++ b/CSS/style.css
@@ -392,6 +392,7 @@ body h1 {
 .imac_section_textbox h2 {
 	text-align: center;
 	font-size: 35px;
+	font-weight: 300;
 }
 
 .imac_section_imagebox {
