--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -17,8 +17,12 @@ body h1 {
 	font-size: 20px;
 }
 
+.header {
+	margin-bottom: 125px;
+}
+
 .header_textbox {
-	padding: 50px 0;
+	padding: 50px 0 0 75px;
 }
 
 #header_textbox_text {
