--- a/CSS/style.css
+++ b/CSS/style.css
@@ -404,7 +404,7 @@ body h1 {
 }
 
 	/****************************
-	INFO BOXES
+	INFO BOXES (Not displayed at the moment)
 	****************************/
 
 .box {
