--- a/CSS/style.css
+++ b/CSS/style.css
@@ -278,7 +278,7 @@ body h1 {
 
 .imac_section_textbox {
 	width: 350px;
-	margin: 35px 10px 0 -50px;
+	margin: 35px 10px 0 0;
 	padding-left: 20px;
 	padding-right: 10px;
 /*	border: 1px dashed black;
