--- a/CSS/style.css
+++ b/CSS/style.css
@@ -118,7 +118,7 @@ body h1 {
 	font-size: 14px;
 	width: 50%;
 	margin-left: 15%;
-	font-weight: bold;
+	font-weight: 300;
 	font-style: italic;
 }
 
@@ -144,8 +144,8 @@ body h1 {
 
 .header_textbox {
 	width: auto;
-/*	border: 2px dashed white;
-*/	position: relative;
+	border: 2px dashed white;
+	position: relative;
 	top: 50px;
 	padding-bottom: 50px;
 }
