--- a/CSS/style.css
+++ b/CSS/style.css
@@ -214,8 +214,8 @@ body h1 {
 
 #icon_section {
 	padding: 50px 0;
-	border: 1px dashed grey;
-}
+/*	border: 1px dashed grey;
+*/}
 
 .icon_box {
 	margin-bottom: 50px;
@@ -271,8 +271,8 @@ body h1 {
 }
 
 .imac_section {
-	border: 1px dashed grey;
-	width: auto;
+/*	border: 1px dashed grey;
+*/	width: auto;
 	min-width: 400px;
 	vertical-align: top;
 	text-align: center;
@@ -285,8 +285,8 @@ body h1 {
 }
 
 .imac_section_textbox, .imac_section_imagebox {
-	border: 1px dashed grey;
-	position: relative;
+/*	border: 1px dashed grey;
+*/	position: relative;
 	display: inline-block;
 	vertical-align: top;
 	text-align: left;
