--- a/CSS/style.css
+++ b/CSS/style.css
@@ -144,8 +144,8 @@ body h1 {
 
 .header_textbox {
 	width: auto;
-	border: 2px dashed white;
-	position: relative;
+/*	border: 2px dashed white;
+*/	position: relative;
 	top: 50px;
 	padding-bottom: 50px;
 }
