--- a/CSS/style.css
+++ b/CSS/style.css
@@ -114,7 +114,7 @@ body h1 {
 	text-decoration: none;
 	text-transform: uppercase;
 	font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	color: #595959;
+	color: #888;
 	font-size: 14px;
 	width: 50%;
 	margin-left: 15%;
@@ -123,7 +123,7 @@ body h1 {
 }
 
 #go_to_order_link:visited {
-	color: #595959; 
+	color: #888; 
 	text-decoration: none;
 }
 
@@ -135,6 +135,7 @@ body h1 {
 	width: 100%;
 	height: 100vh;
 	background-size: cover;
+	background-position: left top;
 	margin: 0 auto 100px;
 }
 
@@ -266,8 +267,8 @@ body h1 {
 	iMac
 	****************************/
 
-#imac_section_bottom {
-	padding-bottom: 50px;
+#imac {
+	padding: 100px 0;
 }
 
 .imac_section {
