--- a/CSS/style.css
+++ b/CSS/style.css
@@ -272,22 +272,23 @@ body h1 {
 }
 
 .imac_section {
-/*	border: 1px dashed grey;
-*/	width: auto;
+	border: 1px dashed grey;
+	width: 1150px;
 	min-width: 400px;
 	vertical-align: top;
-	text-align: center;
+	text-align: right;
 	display: inline-block;
 	margin-bottom: 100px;
 }
 
 .imac_section img {
 	margin: auto;
+	border: 1px dashed red;
 }
 
 .imac_section_textbox, .imac_section_imagebox {
-/*	border: 1px dashed grey;
-*/	position: relative;
+	border: 1px dashed grey;
+	position: relative;
 	display: inline-block;
 	vertical-align: top;
 	text-align: left;
@@ -295,23 +296,24 @@ body h1 {
 }
 
 .imac_section_textbox {
-	width: 350px;
-	margin: 35px 10px 0 0;
-	padding-left: 20px;
+	width: 380px;
+	margin: 35px 0 0 0;
+	padding-left: 50px;
 	padding-right: 10px;
-/*	border: 1px dashed black;
-*/}
+}
 
 #phone {
 	position: absolute;
-	right: -50px;
+	right: 0px;
 	top: 150px;
 }
 
-#imac_section_textbox_right {
-	width: 360px;
-	padding-left: 40px;
-	margin: 35px -50px 0 40px;
+#imac_section_right {
+	text-align: left;
+}
+
+#imac_section_textbox_right {
+	width: 400px;
 }
 
 .imac_section_textbox p {
@@ -332,10 +334,12 @@ body h1 {
 */}
 
 .imac_section_imagebox {
-	width: 600px;
+	width: auto;
 	min-width: 500px;
 	text-align: center;
 	height: 500px;
+	padding: 0 50px;
+
 
 }
 
