--- a/CSS/style.css
+++ b/CSS/style.css
@@ -113,6 +113,7 @@ body h1 {
 #go_to_order_link {
 	text-decoration: none;
 	font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 18px;
 	color: #888;
 	font-weight: 300;
 }
